--- a/TIL/TIL22_04_04.md
+++ b/TIL/TIL22_04_04.md
@@ -1,7 +1,28 @@
 # 2022-04-04
 ### VSCODE 
-`Wrap with Abbreviation` 부모 랩핑!
+`Wrap with Abbreviation` 부모태그 랩핑!
   
 `lorem1000` 무작위 문자열 1000개 생성
 
 `info.cern.ch` 세계최초의 페이지
+
+`meta 태그`를 통해서 `UTF-8`를 입력해 문자를 인코딩 해줍니다.
+
+`head` 와 `body`는  <br> `body` 를 설명하는 `head`
+
+## Web 과 Internet은 다를까?
+비유를 하자면 InterNet은 **도로**<br>
+Web은 **자동차**에 비유 됩니다.
+<hr>
+1900년에 인터넷<br>
+1990년에 웹이 탄생했습니다.
+
+구형은 스타 형 (핵 공격에 취약했다) => 그래서 발명 <br>
+인터넷을 통해 1990년 말부터 분산형 통신의 등장
+
+처음 인터넷을 만든 나라 `스위스` ! 
+<br> 웹 창시자 : `tim beners lee` 웹 W3.org의 의장으로 활동 했습니다.
+
+<img width="30%" src= "https://user-images.githubusercontent.com/101157141/161478028-c922eebd-c9d7-4e3a-a0ad-6a87ce36c774.png"/>
+
+
