--- a/TIL/TIL22_04_05.md
+++ b/TIL/TIL22_04_05.md
@@ -4,7 +4,7 @@ CSS 셀렉터 학습 하기 좋은 사이트
 
 댓글 라이브러리 [댓글 사용자] Disqus 
 
-방문자 확인 google analytics.google.com/analytics/web/provision/#/provision? 애널리스트  
+방문자 확인 google analytics.google.com/analytics/web/provision/#/provision? 구글 애널리스트  
 
 
 
