--- a/TIL/TIL22_04_05.md
+++ b/TIL/TIL22_04_05.md
@@ -7,4 +7,13 @@ CSS 셀렉터 학습 하기 좋은 사이트
 방문자 확인 google analytics.google.com/analytics/web/provision/#/provision? 구글 애널리스트  
 
 
+```css
+  div.class{
+  'class'라는 클래스를 div태그를 지정한다는 말
+  }
+```
+flex 1차원적 Horizental Vertical
 
+grid는 2차원적 공간 할당
+
+ui transition: 0.3초가 사용자에게 적당하다
